# bayesian-uq

./: .gitignore  CLAUDE.md  README.md  cot_prompting_rationale.md  main.py  pyproject.toml  requirements.txt
analysis/: compute_signals.py
dashboard/: app.py
data/: build_questions_json.py  download_redux.py  questions.json  validate_paraphrases.py
data/mmlu/: mmlu_redux.csv
experiments/: pilot_test.py  run_experiment.py
experiments/configs/: exp1_100q_cot_shuffle_nopara.yaml  exp1_100q_cot_shuffle_para.yaml  exp1_100q_cotstruct_shuffle_para.yaml  exp1_100q_direct_noshuffle_nopara.yaml  exp1_100q_direct_noshuffle_para.yaml  exp1_100q_direct_shuffle_nopara.yaml  exp1_100q_direct_shuffle_para.yaml  exp1_100q_nothink_shuffle.yaml  exp1_100q_nothink_shuffle_nopara.yaml  exp1_100q_nothink_shuffle_para.yaml  exp1_full_cot_noshuffle_nopara.yaml  exp1_full_cot_noshuffle_para.yaml  exp1_full_cot_shuffle_nopara.yaml  exp1_full_cot_shuffle_para.yaml  exp1_full_cotstruct_noshuffle_nopara.yaml  exp1_full_cotstruct_noshuffle_para.yaml  exp1_full_cotstruct_shuffle_nopara.yaml  exp1_full_cotstruct_shuffle_para.yaml  exp1_full_direct_noshuffle_nopara.yaml  exp1_full_direct_noshuffle_nopara_think.yaml  exp1_full_direct_shuffle_para.yaml  (+12 more)
paper/: brainstorm_architecture.md
results/: exp1_100q_nothink_noshuffle_20260311_114537.json  exp1_100q_nothink_noshuffle_para_20260311_150238.json  exp1_100q_nothink_shuffle_para_20260311_160732.json  exp1_100q_think_noshuffle_20260310_123022.json  exp1_100q_think_shuffle_20260306_115546.json  exp1_100q_think_shuffle_para_20260311_163305.json
(+41 files in other folders)
