[project]
name = "bayesian-uq"
version = "0.1.0"
description = "Black-box Bayesian uncertainty quantification for LLM outputs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "datasets>=4.6.1",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "plotly>=6.6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "streamlit>=1.55.0",
    "streamlit-autorefresh>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bayesian_uq"]
